<resources>
    <string name="app_name">Actividad 3 Pantallas</string>
    <string name="label_Title">REGISTRO DE USUARIO</string>
    <string name="bt_menu">☰</string>
    <string name="label_nombre">Nombre:</string>
    <string name="tx_nombre">Escribe tu nombre</string>
    <string name="label_apellido">Apellido:</string>
    <string name="tx_apellido">Escribe tu apellido</string>
    <string name="label_correo">Correo:</string>
    <string name="tx_correo">Escribe tu correo</string>
    <string name="label_telefono">Teléfono:</string>
    <string name="tx_telefono">Escribe tu teléfono</string>
    <string name="bt_email">EMAIL</string>
    <string name="bt_tarjeta">TARJETA</string>
    <string name="bt_registrar">REGISTRAR</string>
    <string name="bt_update">UPDATE</string>
    <string name="bt_delete">ELIMINAR</string>
    <string name="bt_search">CERCAR</string>
    <string name="bt_borrar">BORRAR</string>
    <string name="textView2">Registrado con éxito</string>
    <string name="tx_nombreAuth">Usuario</string>
    <string name="label_emailTitle">ENVIAR UN EMAIL</string>
    <string name="label_emailFrom">De:</string>
    <string name="tx_fromEmail">No has indicado tu correo</string>
    <string name="label_emailTo">Para:</string>
    <string name="tx_emailTo">correo@correo.com</string>
    <string name="tx_emailContent">Escribe aquí tu mensaje</string>
    <string name="label_sentmessage">No se ha enviado nada...</string>
    <string name="label_sentmessageSent">Enviado correctamente!</string>
    <string name="label_sentmessageError">No se puede enviar el mensaje si no tiene destinatario...</string>
    <string name="bt_sendEmail">Enviar</string>
    <string name="menu_exit">Salir</string>
    <string name="label_tarjeta">Tarjeta de usuario</string>
    <string name="tx_nombre_tarjeta">Nombre</string>
    <string name="tx_apellido_tarjeta">Apellido</string>
    <string name="tx_correo_tarjeta">Correo</string>
    <string name="tx_telefono_tarjeta">Teléfono</string>
    <string name="bt_volver">Volver</string>
</resources>
