<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F4F4F4"
            android:onClick="Volver"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A5A5A5"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/label_tarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="40px"
                    android:layout_marginRight="20px"
                    android:background="#FFD4F9"
                    android:text="@string/label_tarjeta"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tx_nombre_tarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="20px"
                    android:layout_marginRight="20px"
                    android:background="#FDE6E6"
                    android:text="@string/tx_nombre_tarjeta"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tx_apellido_tarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="20px"
                    android:layout_marginRight="20px"
                    android:background="#FDE6E6"
                    android:text="@string/tx_apellido_tarjeta"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tx_correo_tarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="20px"
                    android:layout_marginRight="20px"
                    android:background="#FDE6E6"
                    android:text="@string/tx_correo_tarjeta"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tx_telefono_tarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="20px"
                    android:layout_marginRight="20px"
                    android:background="#FDE6E6"
                    android:text="@string/tx_telefono_tarjeta"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_volver"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#595858"
                android:gravity="center"
                android:onClick="Volver"
                android:text="@string/bt_volver"
                android:textSize="34sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
