<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="19"
                android:gravity="center"
                android:text="@string/label_Title"
                android:textAlignment="center"
                android:textSize="34sp" />

            <Button
                android:id="@+id/bt_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20px"
                android:layout_weight="70"
                android:backgroundTint="#595858"
                android:gravity="center"
                android:onClick="showMenu"
                android:text="@string/bt_menu"
                android:textSize="34sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_nombre"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="40px"
                    android:layout_marginBottom="40px"
                    android:layout_weight="50"
                    android:text="@string/label_nombre"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tx_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40px"
                    android:layout_marginRight="20px"
                    android:layout_marginBottom="40px"
                    android:layout_weight="50"
                    android:background="#E4E4E4"
                    android:ems="10"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:tooltipText="Enter your name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:layout_marginBottom="40px"
                android:layout_weight="25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_apellido"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="40px"
                    android:layout_marginBottom="40px"
                    android:layout_weight="50"
                    android:text="@string/label_apellido"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tx_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40px"
                    android:layout_marginRight="20px"
                    android:layout_marginBottom="40px"
                    android:layout_weight="50"
                    android:background="#E4E4E4"
                    android:ems="10"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:tooltipText="Enter your last name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:layout_marginBottom="40px"
                android:layout_weight="25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_correo"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="40px"
                    android:layout_marginBottom="40px"
                    android:layout_weight="50"
                    android:text="@string/label_correo"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tx_correo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40px"
                    android:layout_marginRight="20px"
                    android:layout_marginBottom="40px"
                    android:layout_weight="50"
                    android:background="#E4E4E4"
                    android:inputType="textEmailAddress"
                    android:tooltipText="Enter your email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:layout_marginBottom="40px"
                android:layout_weight="25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_telefono"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="40px"
                    android:layout_marginBottom="40px"
                    android:layout_weight="50"
                    android:text="@string/label_telefono"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tx_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40px"
                    android:layout_marginRight="20px"
                    android:layout_marginBottom="40px"
                    android:layout_weight="50"
                    android:background="#E4E4E4"
                    android:ems="10"
                    android:inputType="phone"
                    android:tooltipText="Enter your phone" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:backgroundTint="#595858"
                android:onClick="openEmail"
                android:text="@string/bt_email"
                android:textSize="11sp"
                app:cornerRadius="1px" />

            <Button
                android:id="@+id/bt_tarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5px"
                android:layout_weight="25"
                android:backgroundTint="#595858"
                android:onClick="openTarjeta"
                android:text="@string/bt_tarjeta"
                android:textSize="11sp"
                app:cornerRadius="1px" />

            <Button
                android:id="@+id/bt_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5px"
                android:layout_weight="25"
                android:backgroundTint="#595858"
                android:onClick="Registrar"
                android:text="@string/bt_registrar"
                android:textSize="11sp"
                app:cornerRadius="1px" />

            <Button
                android:id="@+id/bt_borrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5px"
                android:layout_weight="25"
                android:backgroundTint="#595858"
                android:onClick="Borrar"
                android:text="@string/bt_borrar"
                android:textSize="11sp"
                app:cornerRadius="1px" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
